k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules:
    - host: btoll.example.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: btoll-service
              servicePort: 80
          - path: "/onf/"
            backend:
              serviceName: onf-service
              servicePort: 80
